Anno-tool: Fixed z-index of jQuery UI dialogs relative to other stuff. But moving the dialogs by dragging is still really buggy.

--- a/annotations/static/css/annotation_tool.css
+++ b/annotations/static/css/annotation_tool.css
@@ -278,6 +278,11 @@ div.help_section span.help_header {
     margin: 10px 0 10px 20px;   /* t r b l */
 }
 
+/* jQuery UI dialogs specifically */
+.ui-dialog {
+    z-index: 3;
+}
+
 /* jQuery-UI sliders. */
 .ui-slider {
     width: 250px;
